# ChangeLog for dev-perl/Class-C3
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-C3/ChangeLog,v 1.18 2011/01/14 18:34:52 tove Exp $

  14 Jan 2011; Torsten Veller <tove@gentoo.org> -Class-C3-0.21.ebuild,
  -Class-C3-0.22.ebuild:
  Cleanup

  13 Jan 2011; Brent Baude <ranger@gentoo.org> Class-C3-0.23.ebuild:
  Marking Class-C3-0.23 ppc stable for bug 341865

  05 Dec 2010; Raúl Porcel <armin76@gentoo.org> Class-C3-0.23.ebuild:
  Add ~alpha wrt #345439

  13 Nov 2010; Raúl Porcel <armin76@gentoo.org> Class-C3-0.23.ebuild:
  ia64/sparc stable wrt #341865

  05 Nov 2010; Markos Chandras <hwoarang@gentoo.org> Class-C3-0.23.ebuild:
  Stable on amd64 wrt bug #341865

  04 Nov 2010; Christian Faulhammer <fauli@gentoo.org> Class-C3-0.23.ebuild:
  x86 stable, bug 341865

  22 Sep 2010; Fabian Groffen <grobian@gentoo.org> Class-C3-0.23.ebuild:
  Marked ~ppc-macos

  27 Jun 2010; <nixnut@gentoo.org> Class-C3-0.21.ebuild:
  ppc stable #323529

*Class-C3-0.23 (22 Jun 2010)

  22 Jun 2010; Torsten Veller <tove@gentoo.org> +Class-C3-0.23.ebuild:
  Version bump

  09 May 2010; Raúl Porcel <armin76@gentoo.org> Class-C3-0.21.ebuild:
  ia64/sparc stable

  13 Mar 2010; Raúl Porcel <armin76@gentoo.org> Class-C3-0.21.ebuild,
  Class-C3-0.22.ebuild:
  Add ~ia64/~sparc wrt #308603

*Class-C3-0.22 (29 Jan 2010)

  29 Jan 2010; Torsten Veller <tove@gentoo.org> +Class-C3-0.22.ebuild:
  Version bump

  23 Dec 2009; Fabian Groffen <grobian@gentoo.org> Class-C3-0.21.ebuild:
  Marked ~x86-solaris, bug #296509

  02 Dec 2009; Torsten Veller <tove@gentoo.org> Class-C3-0.21.ebuild:
  Stable on amd64 and x86 (#293622)

  26 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> Class-C3-0.21.ebuild:
  Keywording for ppc, bug 283244

  02 May 2009; Torsten Veller <tove@gentoo.org> -Class-C3-0.20.ebuild:
  Cleanup

*Class-C3-0.21 (25 Mar 2009)

  25 Mar 2009; Torsten Veller <tove@gentoo.org> +Class-C3-0.21.ebuild:
  Version bump
