@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-C3/Attic/Class-C3-0.23.ebuild,v 1.7 2011/01/13 16:53:28 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-C3/Attic/Class-C3-0.23.ebuild,v 1.8 2011/02/19 18:53:12 xarthisius Exp $
 
 EAPI=2
 
@@ -10,7 +10,7 @@ inherit perl-module
 DESCRIPTION="A pragma to use the C3 method resolution order algortihm"
 
 SLOT="0"
-KEYWORDS="~alpha amd64 ia64 ppc sparc x86 ~ppc-macos ~x86-solaris"
+KEYWORDS="~alpha amd64 ia64 ppc ~ppc64 sparc x86 ~ppc-macos ~x86-solaris"
 IUSE="test"
 
 RDEPEND="
