@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/MRO-Compat/Attic/MRO-Compat-0.11.ebuild,v 1.9 2010/12/05 18:43:41 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/MRO-Compat/Attic/MRO-Compat-0.11.ebuild,v 1.10 2011/02/19 18:55:09 xarthisius Exp $
 
 EAPI=2
 
@@ -10,7 +10,7 @@ inherit perl-module
 DESCRIPTION="Lets you build groups of accessors"
 
 SLOT="0"
-KEYWORDS="~alpha amd64 ia64 ppc sparc x86 ~ppc-macos ~x86-solaris"
+KEYWORDS="~alpha amd64 ia64 ppc ~ppc64 sparc x86 ~ppc-macos ~x86-solaris"
 IUSE="test"
 
 RDEPEND="
