@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Email-Abstract
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Abstract/ChangeLog,v 1.24 2010/12/05 18:46:17 armin76 Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Abstract/ChangeLog,v 1.25 2011/02/19 18:56:29 xarthisius Exp $
+
+  19 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
+  Email-Abstract-3.003.ebuild:
+  Mark ~ppc64 wrt #345439
 
   05 Dec 2010; Raúl Porcel <armin76@gentoo.org> Email-Abstract-3.003.ebuild:
   Add ~alpha wrt #345439
