@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/MRO-Compat
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/MRO-Compat/ChangeLog,v 1.13 2010/12/05 18:43:41 armin76 Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/MRO-Compat/ChangeLog,v 1.14 2011/02/19 18:55:09 xarthisius Exp $
+
+  19 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
+  MRO-Compat-0.11.ebuild:
+  Mark ~ppc64 wrt #345439
 
   05 Dec 2010; Raúl Porcel <armin76@gentoo.org> MRO-Compat-0.11.ebuild:
   Add ~alpha wrt #345439
